tests/sksl/errors/golden/SwizzleOutOfBounds.glsl
### Compilation failed:

error: 1: invalid swizzle component 'z'
1 error
